--- a/Ejercicio7.html
+++ b/Ejercicio7.html
@@ -5,21 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Ejercicio1.css">
-    <title>Ejercicio 1</title>
+    <link rel="stylesheet" href="css/7.css">
+    <title>Ejercicio 7</title>
 </head>
 
 <body>
-    <!-- Crear un archivo HTML, que contenga un encabezado <h1> seguido de un párrafo y
-        un encabezado <h2> seguido de otro párrafo. Después, hacer que un párrafo se
-        muestre en negrita y el otro en itálica. Utilizar saltos de línea si los consideran
-        necesarios.
-        2. Ahora vamos a tener que centrar nuestros encabezados y nuestros párrafos
-        alinearlos a la izquierda. A continuación, después del ultimo párrafo vamos a tener
-        que crear una lista ordenada de lo que queramos. Tendremos que mostrar la lista
-        donde la enumeración sean letras del alfabeto. Sin usar CSS -->
+    <!-- Crear un archivo HTML y un archivo CSS, vamos a linkear el archivo CSS al archivo
+HTML y vamos hacer lo mismo que el primer ejercicio, pero ahora la pagina va a
+tener un color de fondo a elección, el encabezado H1 tiene que tener una fuente a
+elección y estar centrado, lo mismo para el encabezado H2, y por ultimo los
+párrafos deben tener un fuente a elección, deben tener un color a elección y deben
+estar centrados a la izquierda. -->
 
-    <h1 align="center">Bad Bunny</h1>
+    <h1>Bad Bunny</h1>
     <p id="wiki" align="center"><strong>Benito Antonio Martínez Ocasio (born March 10, 1994), known by his stage name Bad Bunny,
         is a Puerto Rican rapper, singer, and songwriter. His music is often defined as Latin trap and reggaeton,
         but he has incorporated various other genres into his music, including rock, bachata, and soul. He is also known
@@ -27,24 +25,11 @@
         slurred vocal style and his eclectic fashion sense. Throughout his career,
         Bad Bunny has frequently collaborated with artists such as
         J Balvin, Farruko, Residente, Arcángel, Jhay Cortez, and Daddy Yankee.</strong></p>
-    <h2 align="center">Best selling records</h2>
+    <h2>Best selling records</h2>
     <p id="records" align="center">
         <i>His studio albums are X 100pre (2018), Oasis (with J Balvin, 2019), YHLQMDLG (2020) and El Último Tour Del Mundo
         (2020)</i>
     </p>
-    <p align="center">Ciudades del mundo que ha visitado bad bunny</p>
-    <ul>
-        <li >EEUU </li>
-        <ol>
-            <li>Miami </li>
-            <li>Los Angeles </li>
-        </ol>
-        <li>España </li>
-        <ol>
-            <li>Madrid </li>
-            <li>Ibiza </li>
-        </ol>
-    </ul>
 </body>
 
 </html>
